PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2005-11-11: - Observations for negative values of dP/dt were not phased
              properly for LC plots. Fixed.
2005-11-10: - A value button that set the number of spots on a secondary
              star was inadvertantly removed, which caused additional
              GTK+ warnings to be printed to the console. Fixed.
            - Dirk Terrell found a serious formatting bug in PHOEBE that
              caused malformed values of gravity darkening coefficients to
              be passed to WD. Fixed.
            - PHOEBE 0.28a released!
2005-11-01: - Critical epochs fully implemented. The program now computes
              the periastron passage phase, phases of superior and inferior
              conjunctions (the positions of minima) and phases of the
              ascending and descending nodes (the positions of maxima).
              This was incorporated on suggestion by Petr Harmanec.
            - Surface tab was a bit overcrowded due to the overwhelming
              space devoted to spots. Fixed.
            - PHOEBE 0.28 released!
2005-10-20: - Warning message for the invalid filter passband lacked a
              newline in the end of the line. Fixed.
2005-10-18: - Upper limit for the semi-major axis changed from 1000.0 to
              100000.0 RSun.
2005-10-15: - Labels "Experimental light curve" and "Experimental RV curve"
              changed to "Observed light curve" and "Observed RV curve" in
              plotting windows. The same has been done for all error-repor-
              ting windows.
2005-09-02: - Limb darkening coefficient interpolation didn't work for nega-
              tive values of metallicities due to a silly if-clause that
              rejected any parameters smaller than 0.0. Fixed. Many thanks
              to Janusz Kaluzny for pointing this out!